# VideoStitch

./: .gitignore  CMakeLists.txt  README.md
cmake/: opencv.cmake
data/video1/: README.md
example/: CMakeLists.txt  camera_calib.cpp  cv_scans_stitch.cpp  cv_stitch.cpp  cv_stitch_detail.cpp  feature_extractor.cpp  feature_matches.cpp  orb_comp.cpp
offline/: GetRemapLUT.cpp  GetRemapLUT.h  blender.cpp  blender.h  gutil.h  video_stitcher.cpp  video_stitcher.h
offline/apap/: apap.cpp  apap.h
online/: composer.cu  composer_gpu.h  exposure_compensator.h  video_stitch.cpp  video_stitcher.cpp  video_stitcher.h
online/exposure_compensator/: exposure_compensator.cpp  exposure_compensator.h  my_exposure_compensator.cpp  my_exposure_compensator.h
online/gpu/: composer.cu
test/: CMakeLists.txt  getLUTMain.cpp  get_lut_main.cpp  videoStitchingMain.cpp  video_stitching_main.cpp
util/: logging.hpp
