MACRO(build_example alg_module)
    message(STATUS "build example : ${alg_module}")
#    if ("orb_comp" STREQUAL "${alg_module}")
        include_directories(../tools)
        add_executable(${alg_module} ${alg_module}.cpp ../tools/ORBextractor.cc)
#    else ()
#        add_executable(${alg_module} ${alg_module}.cpp)
#    endif ()
    set(CMAKE_BUILD_TYPE "DEBUG")
    set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/example)
    include_directories(${OpenCV_INCLUDE_DIRS})
    target_link_libraries(${alg_module} ${OpenCV_LIBS})
ENDMACRO()

FILE(GLOB EXAMPLE_SOURCE *.cpp)
FOREACH (module_name ${EXAMPLE_SOURCE})
    STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${module_name})
    build_example(${FILE_NAME})
ENDFOREACH (module_name ${EXAMPLE_SOURCE})

